# jupyterhub-winlocalprocessspawner

./: README.md  pyproject.toml  pytest.ini  setup.py
tests/: __init__.py  test_spawner.py
winlocalprocessspawner/: __init__.py  win_utils.py  winlocalprocessspawner.py
